<resources>
    <string name="app_name">CheckGuincho</string>
    <string name="versao">Versão: 1.6.1</string>

    <string name="botao_atendimento">Atendimento</string>
    <string name="botao_configuracoes">Configurações</string>
    <string name="textoDadosEmpresa">Dados da Empresa</string>
    <string name="textoEmpresa">Empresa: </string>
    <string name="textocnpj">CNPJ: </string>
    <string name="textoDadosPrestador">Dados do Prestador</string>
    <string name="textoMotorista">"Motorista: "</string>
    <string name="textoRg">"Rg: "</string>
    <string name="textoTelefone">"Telefone: "</string>
    <string name="textoDadosGerais">Dados Gerais</string>
    <string name="textoCarregarLogo">"Carregar Logo: "</string>
    <string name="textoAssinatura">Assinatura: </string>
    <string name="texto_digiteEmail">Digite seu e-mail</string>
    <string name="texto_digiteSenha">Digite sua senha</string>
    <string name="botao_Login">Login</string>
    <string name="texto_cadastrar">Não possui conta? Cadastre-se</string>
    <string name="texto_logo">Adicionar uma logo</string>
    <string name="texto_alterarDepois">* Você pode alterar depois</string>
    <string name="texto_digiteNome">Digite o nome da empresa</string>
    <string name="texto_digiteTelefone">Digite o telefone</string>
    <string name="botao_cadastrar">Cadastrar</string>
    <string name="texto_Cadastrado">Já possuo conta</string>
    <string name="texto_nomeEmpresa">Nome Empresa</string>
    <string name="texto_data">Data</string>
    <string name="texto_nomePrestador">Nome Prestador</string>
    <string name="texto_localizacao">Localização</string>
    <string name="botao_iniciaAtendimento">Iniciar Atendimento</string>
    <string name="botao_salvar">Salvar</string>
    <string name="botao_proximo">Próximo</string>
    <string name="textoDadosProprietario">Dados Proprietário</string>
    <string name="texto_Nome">"Nome: "</string>
    <string name="texto_telefone">"Telefone: "</string>
    <string name="textoDadosVeiculo">Dados Veículo</string>
    <string name="texto_Marca">"Marca: "</string>
    <string name="texto_modelo">"Modelo: "</string>
    <string name="texto_ano">"Ano: "</string>
    <string name="texto_cor">"Cor: "</string>
    <string name="texto_placa">"Placa: "</string>
    <string name="texto_recusaInspecao">Proprietário NÃO deseja inspeção</string>
    <string name="textooVeiculoPossui">O veículo possui:</string>
    <string name="texto_radio">Rádio ou multímidia</string>
    <string name="texto_estepe">Estepe</string>
    <string name="texto_macaco">Macaco</string>
    <string name="texto_chaveRodas">Chaves de rodas</string>
    <string name="texto_triangulo">Triângulo</string>
    <string name="texto_extintor">Extintor</string>
    <string name="texto_calotas">Calotas</string>
    <string name="texto_tapeteBorracha">Tapetes de borracha</string>
    <string name="texto_tapeteCarpete">Tapetes de carpete</string>
    <string name="texto_rodasLiga">Rodas de liga leve</string>
    <string name="texto_faroisAux">Farois auxiliares</string>
    <string name="texto_bateria">Bateria</string>
    <string name="texto_retrovisorEletrico">Retrovisores elétricos</string>
    <string name="texto_bagageiro">Bagageiro</string>
    <string name="texto_rack">Rack</string>
    <string name="texto_carter">Cartér/Protetor</string>
    <string name="texto_documentos">Documentos</string>
    <string name="texto_chaves">Chaves</string>
    <string name="texto_moto">Motocicleta</string>
    <string name="texto_observacao">Digite alguma observação...</string>
    <string name="botao_gerarPdf">Gerar Pdf</string>
    <string name="textoValor">"Valor: "</string>
    <string name="textoObservacao">Observação: </string>
    <string name="textoDadosResponsavel">Dados Responsável</string>
    <string name="texto_painel">Foto Painel</string>
    <string name="texto_lateral">Foto Lateral</string>
    <string name="texto_frente">Foto Frente</string>
    <string name="botao_chegadaAoDestino">Chegada ao Destino</string>
    <string name="texto_configuracoes">Configurações</string>
    <string name="texto_sair">Sair</string>

    <string-array name="camera_item">
        <item>Painel</item>
        <item>Lateral</item>
        <item>Frente</item>
    </string-array>
</resources>
