<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context="telas.CheckListActivity">

    <include android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

    <ScrollView
        android:padding="8dp"
        android:layout_below="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:padding="8dp"
                android:textSize="26sp"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorPrimaryDark"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textooVeiculoPossui" />

            <CheckBox
                android:padding="8dp"
                android:id="@+id/cbRadio"
                android:text="@string/texto_radio"
                android:theme="@style/MyCheckBoxStyle"
                android:textSize="20sp"
                android:textColor="@color/colorText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <CheckBox
                android:padding="8dp"
                android:id="@+id/cbEstepe"
                android:text="@string/texto_estepe"
                android:theme="@style/MyCheckBoxStyle"
                android:textSize="20sp"
                android:textColor="@color/colorText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <CheckBox
                android:padding="8dp"
                android:id="@+id/cbMacaco"
                android:text="@string/texto_macaco"
                android:theme="@style/MyCheckBoxStyle"
                android:textSize="20sp"
                android:textColor="@color/colorText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <CheckBox
                android:padding="8dp"
                android:id="@+id/cbChaveRodas"
                android:text="@string/texto_chaveRodas"
                android:theme="@style/MyCheckBoxStyle"
                android:textSize="20sp"
                android:textColor="@color/colorText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <CheckBox
                android:padding="8dp"
                android:id="@+id/cbTriangulo"
                android:text="@string/texto_triangulo"
                android:theme="@style/MyCheckBoxStyle"
                android:textSize="20sp"
                android:textColor="@color/colorText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <CheckBox
                android:padding="8dp"
                android:id="@+id/cbExtintor"
                android:text="@string/texto_extintor"
                android:theme="@style/MyCheckBoxStyle"
                android:textSize="20sp"
                android:textColor="@color/colorText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <CheckBox
                android:padding="8dp"
                android:id="@+id/cbCalotas"
                android:text="@string/texto_calotas"
                android:theme="@style/MyCheckBoxStyle"
                android:textSize="20sp"
                android:textColor="@color/colorText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <CheckBox
                android:padding="8dp"
                android:id="@+id/cbTapeteBorracha"
                android:text="@string/texto_tapeteBorracha"
                android:theme="@style/MyCheckBoxStyle"
                android:textSize="20sp"
                android:textColor="@color/colorText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <CheckBox
                android:padding="8dp"
                android:id="@+id/cbTapeteCarpete"
                android:text="@string/texto_tapeteCarpete"
                android:theme="@style/MyCheckBoxStyle"
                android:textSize="20sp"
                android:textColor="@color/colorText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <CheckBox
                android:padding="8dp"
                android:id="@+id/cbRodaLiga"
                android:text="@string/texto_rodasLiga"
                android:theme="@style/MyCheckBoxStyle"
                android:textSize="20sp"
                android:textColor="@color/colorText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <CheckBox
                android:padding="8dp"
                android:id="@+id/cbFaroisAux"
                android:text="@string/texto_faroisAux"
                android:theme="@style/MyCheckBoxStyle"
                android:textSize="20sp"
                android:textColor="@color/colorText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <CheckBox
                android:padding="8dp"
                android:id="@+id/cbBateria"
                android:text="@string/texto_bateria"
                android:theme="@style/MyCheckBoxStyle"
                android:textSize="20sp"
                android:textColor="@color/colorText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <CheckBox
                android:padding="8dp"
                android:id="@+id/cbRetrovisorEletrico"
                android:text="@string/texto_retrovisorEletrico"
                android:theme="@style/MyCheckBoxStyle"
                android:textSize="20sp"
                android:textColor="@color/colorText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <CheckBox
                android:padding="8dp"
                android:id="@+id/cbBagageiro"
                android:text="@string/texto_bagageiro"
                android:theme="@style/MyCheckBoxStyle"
                android:textSize="20sp"
                android:textColor="@color/colorText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <CheckBox
                android:padding="8dp"
                android:id="@+id/cbRack"
                android:text="@string/texto_rack"
                android:theme="@style/MyCheckBoxStyle"
                android:textSize="20sp"
                android:textColor="@color/colorText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <CheckBox
                android:padding="8dp"
                android:id="@+id/cbCarter"
                android:text="@string/texto_carter"
                android:theme="@style/MyCheckBoxStyle"
                android:textSize="20sp"
                android:textColor="@color/colorText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <CheckBox
                android:padding="8dp"
                android:id="@+id/cbDocumentos"
                android:text="@string/texto_documentos"
                android:theme="@style/MyCheckBoxStyle"
                android:textSize="20sp"
                android:textColor="@color/colorText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <CheckBox
                android:padding="8dp"
                android:id="@+id/cbChaves"
                android:text="@string/texto_chaves"
                android:theme="@style/MyCheckBoxStyle"
                android:textSize="20sp"
                android:textColor="@color/colorText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <CheckBox
                android:padding="8dp"
                android:id="@+id/cbMoto"
                android:text="@string/texto_moto"
                android:theme="@style/MyCheckBoxStyle"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Button
                android:padding="8dp"
                android:layout_marginTop="20dp"
                android:id="@+id/btProximo"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button_style"
                android:text="@string/botao_proximo"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
