<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context="telas.CadastroActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:padding="8dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivLogo"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/logo"/>

            <TextView
                android:padding="4dp"
                android:id="@+id/tvLogo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/texto_logo"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/texto_alterarDepois"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etNomeEmpresa"
                android:textColorHint="@color/colorTextHint"
                android:hint="@string/texto_digiteNome"
                android:inputType="textPersonName"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etTelefone"
                android:textColorHint="@color/colorTextHint"
                android:hint="@string/texto_digiteTelefone"
                android:inputType="number"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etEmail"
                android:textColorHint="@color/colorTextHint"
                android:hint="@string/texto_digiteEmail"
                android:inputType="textEmailAddress"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etSenha"
                android:textColorHint="@color/colorTextHint"
                android:hint="@string/texto_digiteSenha"
                android:inputType="textPassword"/>

            <Button
                android:layout_marginTop="20dp"
                android:id="@+id/btCadastro"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button_style"
                android:text="@string/botao_cadastrar"
                android:textColor="@android:color/white" />

            <TextView
                android:padding="8dp"
                android:id="@+id/tvCadastrado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/texto_Cadastrado"/>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
