<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context="telas.AtendimentoActivity">

    <include android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

    <LinearLayout
        android:orientation="vertical"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:padding="8dp"
            android:id="@+id/tvNomeEmpresa"
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:textSize="20sp"
            android:layout_height="wrap_content"
            android:text="@string/texto_nomeEmpresa" />

        <TextView
            android:padding="8dp"
            android:id="@+id/tvData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/texto_data"
            android:textAlignment="center"
            android:textSize="20sp"/>

        <TextView
            android:padding="8dp"
            android:id="@+id/tvNomePrestador"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/texto_nomePrestador"
            android:textAlignment="center"
            android:textSize="20sp"/>

        <TextView
            android:padding="8dp"
            android:id="@+id/tvLocalizacao"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/texto_localizacao"
            android:textAlignment="center"
            android:textSize="20sp"/>

        <Button
            android:layout_marginTop="20dp"
            android:id="@+id/btIniciaAtendimento"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_style"
            android:text="@string/botao_iniciaAtendimento"
            android:textColor="@android:color/white" />
    </LinearLayout>
</RelativeLayout>
