<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context="telas.FormularioActivity">

    <include android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

    <ScrollView
        android:layout_below="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_below="@+id/toolbar"
            android:padding="8dp"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:padding="8dp"
                android:textSize="26sp"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorPrimaryDark"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textoDadosProprietario" />

            <TableRow
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/texto_Nome"/>

                <EditText android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:id="@+id/etNomeProprietario"/>
            </TableRow>

            <TableRow
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/texto_telefone"/>

                <EditText android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:id="@+id/etTelefone"/>
            </TableRow>

            <TextView
                android:padding="8dp"
                android:textSize="26sp"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorPrimaryDark"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textoDadosVeiculo" />

            <TableRow
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/texto_Marca"/>

                <EditText android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:imeOptions="actionNext"
                    android:id="@+id/etMarca"/>
            </TableRow>

            <TableRow
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/texto_modelo"/>

                <EditText android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:imeOptions="actionNext"
                    android:id="@+id/etModelo"/>
            </TableRow>

            <TableRow
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/texto_ano"/>

                <EditText android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:id="@+id/etAno"/>
            </TableRow>

            <TableRow
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/texto_cor"/>

                <EditText android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:id="@+id/etCor"/>
            </TableRow>

            <TableRow
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/texto_placa"/>

                <EditText android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:id="@+id/etPlaca"/>
            </TableRow>

            <CheckBox
                android:id="@+id/cbRecusaInspecao"
                android:text="@string/texto_recusaInspecao"
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Button
                android:layout_marginTop="20dp"
                android:id="@+id/btProximo"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button_style"
                android:text="@string/botao_proximo"
                android:textColor="@android:color/white" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
