<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context="telas.ConfiguracaoActivity">

    <include android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

    <ScrollView
        android:layout_below="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|center_horizontal|center_vertical"
            android:orientation="vertical">

            <TextView
                android:padding="8dp"
                android:textSize="26sp"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorPrimaryDark"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textoDadosEmpresa" />

            <TableRow
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/textoEmpresa"/>

                <EditText android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:id="@+id/etNomeEmpresa"/>
            </TableRow>

            <TableRow
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/textocnpj"/>

                <EditText android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:id="@+id/etCnpjEmpresa"/>
            </TableRow>

            <TextView
                android:padding="8dp"
                android:layout_marginTop="20dp"
                android:textSize="26sp"
                android:textColor="@color/colorPrimaryDark"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textoDadosPrestador" />

            <TableRow
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/textoMotorista"/>

                <EditText android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:id="@+id/etNomeMotorista"/>
            </TableRow>


            <TableRow
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/textoRg"/>

                <EditText android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:id="@+id/etRgMotorista"/>
            </TableRow>

            <TableRow
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/textoTelefone"/>

                <EditText android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:id="@+id/etTelefoneMorista"/>
            </TableRow>

            <TextView
                android:padding="8dp"
                android:layout_marginTop="20dp"
                android:textSize="26sp"
                android:textColor="@color/colorPrimaryDark"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textoDadosGerais" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:id="@+id/tvCarregarLogo"
                android:textAlignment="textStart"
                android:text="@string/textoCarregarLogo"/>

            <ImageView
                android:layout_margin="8dp"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:id="@+id/ivLogo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:id="@+id/tvAssinatura"
                android:textAlignment="textStart"
                android:text="@string/textoAssinatura"/>

            <ImageView
                android:layout_margin="8dp"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:id="@+id/ivAssinatura" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvVersao"
                android:textAlignment="center"
                android:text="@string/versao"/>
        </LinearLayout>
    </ScrollView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="10dp">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fabSalvar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:backgroundTint="@color/colorPrimaryDark"
                app:srcCompat="@drawable/ic_save"
                tools:ignore="VectorDrawableCompat" />
        </LinearLayout>
</RelativeLayout>
